--- a/main.css
+++ b/main.css
@@ -208,6 +208,10 @@ header {
 
 /* Responsive styles */
 @media (max-width: 431px) {
+    .main-content {
+        padding: 15px;
+    }
+    
     .dropdown-container {
         display: none;
         font-size: 11px;
